@@ -47,11 +47,6 @@ octave_i2c::octave_i2c()
     this->fd = -1;
 }
 
-octave_i2c::octave_i2c(string path, int flags)
-{
-    this->fd = open(path.c_str(), flags, 0);
-}
-
 octave_i2c::~octave_i2c()
 {
     this->close();
@@ -72,6 +67,20 @@ void octave_i2c::print_raw (std::ostream& os, bool pr_as_read_syntax) const
 {
     os << this->fd;
 }
+
+int octave_i2c::open(string path, int flags)
+{
+    this->fd = ::open(path.c_str(), flags, 0);
+
+    if (this->get_fd() < 0)
+    {
+        error("i2c: Error opening the interface: %s\n", strerror(errno));
+        return -1;
+    }
+
+    return this->get_fd();
+}
+
 
 int octave_i2c::set_addr(int addr)
 {
@@ -103,67 +112,68 @@ int octave_i2c::get_addr()
     return this->addr;
 }
 
-int octave_i2c::read(char *buf, unsigned int len)
+int octave_i2c::read(uint8_t *buf, unsigned int len)
 {   
     if (this->get_fd() < 0)
     {
         error("i2c: Interface must be open first...");
         return -1;
     }
-    
+
     int retval = -1;
-    
+
 #if defined (__linux__)
     retval = ::read(this->get_fd(), buf, len);
 #endif
-    
+
 #if defined (__FreeBSD__)
     // Populate FreeBSD-specific structure
     struct iiccmd i2c_slave;
-    
-    i2c_slave.slave = (unsigned char)this->get_addr();
+
+    i2c_slave.slave = static_cast<uint8_t>(this->get_addr());
     i2c_slave.count = len;
     i2c_slave.last = 0; // No additional reads will follow for this transaction
     i2c_slave.buf = buf;
-    
+
     ::ioctl(this->get_fd(), I2CSTART, &i2c_slave);
     retval = ::ioctl(this->get_fd(), I2CREAD, &i2c_slave);
     ::ioctl(this->get_fd(), I2CSTOP);
 #endif
-    
+
     if (retval < 0)
         error("i2c: Failed to read from the i2c bus: %s\n", strerror(errno));
 
     return retval;
 }
 
-int octave_i2c::write(unsigned char *buf, int len)
+int octave_i2c::write(uint8_t *buf, unsigned int len)
 {
     if (this->get_fd() < 0)
     {
         error("i2c: Interface must be open first...");
         return -1;
     }
+
     int retval = -1;
 
 #if defined (__linux__)
     retval = ::write(this->get_fd(), buf, len);
 #endif
-    
+
 #if defined (__FreeBSD__)
     // Populate FreeBSD-specific structure
     struct iiccmd i2c_slave;
-    
-    i2c_slave.slave = (unsigned char)this->get_addr();
+
+    i2c_slave.slave = static_cast<uint16_t>(this->get_addr());
     i2c_slave.count = len;
     i2c_slave.last = 0; // No additional writes will follow for this transaction
-    i2c_slave.buf = (char*)buf;
-    
+    i2c_slave.buf = buf;
+
     ::ioctl(this->get_fd(), I2CSTART, &i2c_slave);
     retval = ::ioctl(this->get_fd(), I2CWRITE, &i2c_slave);
     ::ioctl(this->get_fd(), I2CSTOP);
 #endif
-    
+
     if (retval < 0)
         error("i2c: Failed to write to the i2c bus: %s\n", strerror(errno));
 
