@@ -4,9 +4,10 @@ Summary of important user-visible changes for instrument-control 0.2.0:
  ** Interfaces are now compiled seperately (i.e. failed compilation of one
     interface does not mean fail of whole package)
 
- ** Parallel interface support for FreeBSD platform
+ ** Parallel and i2c interface support for FreeBSD platform
 
- ** i2c interface support for FreeBSD platform
+ ** i2c_write no longer accepts strings for data parameter
+
 
 Summary of important user-visible changes for instrument-control 0.1.0:
 -------------------------------------------------------------------
